[gd_scene load_steps=10 format=3 uid="uid://cdlmfx3sjk6aq"]

[ext_resource type="Texture2D" uid="uid://cm4kdfqpvivid" path="res://assets/objects/table.png" id="1_af4we"]
[ext_resource type="Script" path="res://game/objects/table_computer.gd" id="1_gyi6p"]
[ext_resource type="Texture2D" uid="uid://c3r1orfi77ed8" path="res://assets/objects/doctor_chair.png" id="2_uc2xm"]
[ext_resource type="Texture2D" uid="uid://b6erq4cb3ynjb" path="res://assets/objects/computer.png" id="3_l3t52"]
[ext_resource type="Texture2D" uid="uid://344ktqax0wku" path="res://assets/objects/computer_closed.png" id="4_xpfsh"]
[ext_resource type="Theme" uid="uid://bg721ml30kggd" path="res://assets/themes/hint_label_theme.tres" id="6_c7mfp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jgp6"]
size = Vector2(74, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qccjw"]
size = Vector2(14, 40)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n41x0"]
radius = 38.0
height = 158.0

[node name="Table" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_gyi6p")

[node name="Table" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_af4we")

[node name="Monitor" type="Sprite2D" parent="."]
position = Vector2(0, 25)
scale = Vector2(2, 2)
texture = ExtResource("2_uc2xm")

[node name="Chair" type="Sprite2D" parent="."]
position = Vector2(6, -22)
scale = Vector2(2, 2)
texture = ExtResource("3_l3t52")

[node name="Computer" type="Sprite2D" parent="."]
position = Vector2(44, 5)
scale = Vector2(2, 2)
texture = ExtResource("4_xpfsh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_1jgp6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(45, 3)
shape = SubResource("RectangleShape2D_qccjw")

[node name="Label" type="Label" parent="."]
z_index = 10
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = -83.0
offset_right = 46.0
offset_bottom = -57.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("6_c7mfp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
z_index = 10
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = -63.0
offset_right = 48.0
offset_bottom = -37.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("6_c7mfp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 13)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_n41x0")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
